tests/errors/deque_missing_use.ptt
spark {
  d is Deque of int
  yell(d.len())
}
